@@ -108,6 +108,10 @@ upgrade PHP if you have not done so prior to upgrading MediaWiki.
 * Added support in jquery.localize for placeholder attributes.
 * (bug 38151) Implemented mw.user.getRights for getting and caching the current
   user's user rights.
+* Session storage can now configured independently of general object cache 
+  storage, by using $wgSessionCacheType. $wgSessionsInMemcached has been 
+  renamed to $wgSessionsInObjectCache, with the old name retained for backwards
+  compatibility.
 * Implemented mw.user.getGroups for getting and caching user groups.
 * (bug 37830) Added $wgRequirePasswordforEmailChange to control whether password
   confirmation is required for changing an email address or not.
